Had some fun with SonarQube.
Change-Id: I4422a0c7f833e0cda8047b36075626647e33833c